--- a/Bootstrap4/H9/index.html
+++ b/Bootstrap4/H9/index.html
@@ -7,7 +7,68 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <h3>Kasutajad</h3>
+      <div class="row">
+        <div class="col-8">
+          <button type="button" class="mb-3 btn btn-success">+Lisa uus</button>
+        </div>
+        <div class="col-4">
+          <div class="input-group">
+            <input type="search" class="form-control rounded" aria-label="Search">
+            <button type="button" class="btn btn-success" data-mdb-ripple-init>Otsi</button>
+          </div>
+        </div>
+      </div>
+    <table class="table table-striped table-hover table-sm">
+      <thead class="table-dark">
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">pilt</th>
+          <th scope="col">nimi</th>
+          <th scope="col">Email</th>
+          <th scope="col"></th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td><img class="rounded-circle" src="https://thispersondoesnotexist.com/" alt="pilt" height="50"></td>
+          <td>Heli Kopter</td>
+          <td>heli@kopter.ee</td>
+          <td><button type="button" class="btn btn-warning">Muuda</button></td>
+          <td><button type="button" class="btn btn-danger">Delete</button></td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td><img class="rounded-circle" src="https://thispersondoesnotexist.com/" alt="pilt" height="50"></td>
+          <td>Anna Nuga</td>
+          <td>anna@nuga.com</td>
+          <td><button type="button" class="btn btn-warning">Muuda</button></td>
+          <td><button type="button" class="btn btn-danger">Delete</button></td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td><img class="rounded-circle" src="https://thispersondoesnotexist.com/" alt="pilt" height="50"></td>
+          <td>Imre Tard</td>
+          <td>imre@tard.eu</td>
+          <td><button type="button" class="btn btn-warning">Muuda</button></td>
+          <td><button type="button" class="btn btn-danger">Delete</button></td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+    <script>
+      $(document).ready(function(){
+        $("#myInput").on("keyup", function() {
+          var value = $(this).val().toLowerCase();
+          $("#myTable tr").filter(function() {
+            $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+          });
+        });
+      });
+      </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
