--- a/Bootstrap4/phpkt_09/index.html
+++ b/Bootstrap4/phpkt_09/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>phpkt_09</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
+    <style>
+        .imaged {
+            background-image: url(https://picsum.photos/1300/400);
+            height: 20vh;
+        }
+    </style>
+</head>
+  
   <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg">
@@ -41,6 +48,16 @@
            <button class="btn btn-outline-dark my-2 mx-3" type="submit">Button</button>
           </div>
         </nav>
+        <div class=" bg-body-tertiary rounded-3 text-white">
+        <div class="text-center container-fluid py-5 rounded-1 imaged">
+          <h1 class="display-1">Jumbotron</h1>
+          <p class="text-center fs-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+       </div>
+      </div>
+      <div class="content">
+        <p class="lead text-center my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, ut. <button class="btn btn-danger" type="button">Call To Action</button></p>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
