--- a/Bootstrap4/phpkt_09/index.html
+++ b/Bootstrap4/phpkt_09/index.html
@@ -54,8 +54,56 @@
           <p class="text-center fs-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
        </div>
       </div>
-      <div class="content">
-        <p class="lead text-center my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, ut. <button class="btn btn-danger" type="button">Call To Action</button></p>
+      <div class="content mb-5">
+        <span><p class="lead text-center my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, ut.<button class="btn btn-danger ms-5" type="button">Call To Action</button></p></span>
+        <div class="row align-items-md-stretch pt-4">
+            <div class="col align-items-center">
+              <div class="h-200 rounded-1 border">
+                <img class="img-fluid card-img-top rounded-1" src="https://picsum.photos/200/50" alt="img">
+              </div>
+            </div>
+            <div class="col align-items-center">
+                <div class="h-200 rounded-1 border">
+                  <img class="img-fluid card-img-top rounded-1" src="https://picsum.photos/200/50" alt="img">
+                </div>
+              </div>
+              <div class="col align-items-center">
+                <div class="h-200 rounded-1 border">
+                  <img class="img-fluid card-img-top rounded-1" src="https://picsum.photos/200/50" alt="img">
+                </div>
+              </div>
+          </div>
+      </div>
+      <div>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="img-fluid card-img-top rounded-1 shadow" src="https://picsum.photos/320/320" alt="img">
+            </div>
+            <div class="col-sm-6">
+                <h3>About Us</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid maxime est delectus illo hic. Culpa cumque tempora enim, asperiores distinctio magnam earum similique delectus odit inventore cum aperiam repudiandae, perferendis corrupti, nisi voluptatum? Velit tenetur voluptas numquam eveniet molestias. Ipsum blanditiis maxime repudiandae. Vero minus distinctio mollitia debitis ipsam recusandae voluptates minima voluptate laboriosam eos, laudantium neque quos assumenda incidunt eaque asperiores maiores adipisci numquam corporis nobis. Odit ut debitis eligendi culpa voluptas reiciendis, esse, commodi deserunt deleniti perspiciatis odio.</p>
+                <h5>Lorem, ipsum:</h5>
+                <span class="badge bg-primary rounded-5 me-2">Lorem</span>
+                <span class="badge bg-primary rounded-5 me-2">Lorem</span>
+                <span class="badge bg-primary rounded-5 me-2">Lorem</span>
+                <span class="badge bg-primary rounded-5 me-2">Lorem</span>
+                <span class="badge bg-primary rounded-5 me-2">Lorem</span>
+                <span class="badge bg-primary rounded-5 me-2">Lorem</span>
+            </div>
+            <div class="col-sm-2">
+                <h5>Skills & Tools</h5>
+            </div>
+            <div>
+                <p class="lead my-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, est molestias ullam mollitia placeat voluptatibus, voluptatum alias eligendi facere sunt fuga distinctio esse provident! Iste dolores maiores temporibus quia velit! Aperiam repellat eum commodi sapiente amet consequatur odit, tenetur, in deserunt quo molestiae saepe fugit optio exercitationem, sequi qui. Aut!
+                </p>
+            </div>
+            <div class="videodiv text-center">
+                <h1>Section with video</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Provident odio fuga inventore facere repudiandae ab totam quaerat reiciendis in cumque?</p>
+                <iframe width="1000" height="500" src="https://www.youtube.com/embed/hTWKbfoikeg?si=ejwyrPVx9TtizODM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
