--- a/Bootstrap4/phpkt_09/index.html
+++ b/Bootstrap4/phpkt_09/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg">
-            <img src="https://picsum.photos/90/30" alt="">
+            <img src="icon.jpg" height="32" alt="icon">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#minuMenyy" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -56,20 +56,20 @@
       </div>
       <div class="content mb-5">
         <span><p class="lead text-center my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, ut.<button class="btn btn-danger ms-5" type="button">Call To Action</button></p></span>
-        <div class="row align-items-md-stretch pt-4">
-            <div class="col align-items-center">
+        <div class="row pt-4">
+            <div class="col-sm-4 mb-3">
               <div class="h-200 rounded-1 border">
-                <img class="img-fluid card-img-top rounded-1" src="https://picsum.photos/200/50" alt="img">
+                <img class="card-img-top rounded-1" src="https://picsum.photos/200/50" alt="img">
               </div>
             </div>
-            <div class="col align-items-center">
+            <div class="col-sm-4 mb-3">
                 <div class="h-200 rounded-1 border">
-                  <img class="img-fluid card-img-top rounded-1" src="https://picsum.photos/200/50" alt="img">
+                  <img class="card-img-top rounded-1" src="https://picsum.photos/200/50" alt="img">
                 </div>
               </div>
-              <div class="col align-items-center">
+              <div class="col-sm-4 mb-3">
                 <div class="h-200 rounded-1 border">
-                  <img class="img-fluid card-img-top rounded-1" src="https://picsum.photos/200/50" alt="img">
+                  <img class="card-img-top rounded-1" src="https://picsum.photos/200/50" alt="img">
                 </div>
               </div>
           </div>
@@ -77,11 +77,11 @@
       <div>
         <div class="row">
             <div class="col-sm-3">
-                <img class="img-fluid card-img-top rounded-1 shadow" src="https://picsum.photos/320/320" alt="img">
+                <img class="img-fluid card-img-top rounded-1 shadow" width="100%" src="https://picsum.photos/320/320" alt="img">
             </div>
             <div class="col-sm-6">
-                <h3>About Us</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid maxime est delectus illo hic. Culpa cumque tempora enim, asperiores distinctio magnam earum similique delectus odit inventore cum aperiam repudiandae, perferendis corrupti, nisi voluptatum? Velit tenetur voluptas numquam eveniet molestias. Ipsum blanditiis maxime repudiandae. Vero minus distinctio mollitia debitis ipsam recusandae voluptates minima voluptate laboriosam eos, laudantium neque quos assumenda incidunt eaque asperiores maiores adipisci numquam corporis nobis. Odit ut debitis eligendi culpa voluptas reiciendis, esse, commodi deserunt deleniti perspiciatis odio.</p>
+                <h3 class="mt-3">About Us</h3>
+                <p class="mt-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos reiciendis minus corrupti numquam molestias qui pariatur provident laboriosam beatae totam? Veritatis molestias esse possimus. Assumenda, dicta. Rerum, officiis qui. Explicabo autem a ipsum porro sapiente libero amet vitae expedita soluta aliquam, optio aut enim inventore totam quibusdam similique. Voluptatum, totam?</p>
                 <h5>Lorem, ipsum:</h5>
                 <span class="badge bg-primary rounded-5 me-2">Lorem</span>
                 <span class="badge bg-primary rounded-5 me-2">Lorem</span>
@@ -90,8 +90,26 @@
                 <span class="badge bg-primary rounded-5 me-2">Lorem</span>
                 <span class="badge bg-primary rounded-5 me-2">Lorem</span>
             </div>
-            <div class="col-sm-2">
-                <h5>Skills & Tools</h5>
+            <div class="col-sm-3">
+                <h5 class="mt-3">Skills & Tools</h5>
+                <div class="progress mb-3">
+                  <div class="progress-bar" role="progressbar" style="width: 58%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">HTML</div>
+                </div>
+                <div class="progress mb-3">
+                  <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">CSS</div>
+                </div>
+                <div class="progress mb-3">
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">JavaScript</div>
+                </div>
+                <div class="progress mb-3">
+                  <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Python</div>
+                </div>
+                <div class="progress mb-3">
+                  <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Node.js</div>
+                </div>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">PHP</div>
+                </div>
             </div>
             <div>
                 <p class="lead my-5">
@@ -99,9 +117,13 @@
                 </p>
             </div>
             <div class="videodiv text-center">
-                <h1>Section with video</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Provident odio fuga inventore facere repudiandae ab totam quaerat reiciendis in cumque?</p>
-                <iframe width="1000" height="500" src="https://www.youtube.com/embed/hTWKbfoikeg?si=ejwyrPVx9TtizODM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h1 class="mb-3">Section with video</h1>
+                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Provident odio fuga inventore facere repudiandae ab totam quaerat reiciendis in cumque?</p>
+                <span>
+                  <button class="btn btn-primary me-3 mb-5">Download Now</button>
+                  <button class="btn btn-outline-dark mb-5">Learn more now</button>
+                </span>
+                <iframe width="100%" height="500" src="https://www.youtube.com/embed/hTWKbfoikeg?si=ejwyrPVx9TtizODM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
       </div>
