--- a/Bootstrap4/phpkt_09/index.html
+++ b/Bootstrap4/phpkt_09/index.html
@@ -36,13 +36,13 @@
               <a class="nav-link" href="#">Kontakt</a>
             </li>
           </ul>
-          <svg class="ms-auto mx-3" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+          <svg class="ms-auto mx-3" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
           </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
             <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15"/>
           </svg>
-          <svg class="mx-3" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+          <svg class="mx-3" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
           </svg>
            <button class="btn btn-outline-dark my-2 mx-3" type="submit">Button</button>
@@ -55,7 +55,7 @@
        </div>
       </div>
       <div class="content mb-5">
-        <span><p class="lead text-center my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, ut.<button class="btn btn-danger ms-5" type="button">Call To Action</button></p></span>
+        <p class="lead text-center my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, ut.<button class="btn btn-danger ms-5" type="button">Call To Action</button></p>
         <div class="row pt-4">
             <div class="col-sm-4 mb-3">
               <div class="h-200 rounded-1 border">
@@ -77,7 +77,7 @@
       <div>
         <div class="row">
             <div class="col-sm-3">
-                <img class="img-fluid card-img-top rounded-1 shadow" width="100%" src="https://picsum.photos/320/320" alt="img">
+                <img class="img-fluid card-img-top rounded-1 shadow" src="https://picsum.photos/320/320" alt="img">
             </div>
             <div class="col-sm-6">
                 <h3 class="mt-3">About Us</h3>
@@ -123,7 +123,7 @@
                   <button class="btn btn-primary me-3 mb-5">Download Now</button>
                   <button class="btn btn-outline-dark mb-5">Learn more now</button>
                 </span>
-                <iframe width="100%" height="500" src="https://www.youtube.com/embed/hTWKbfoikeg?si=ejwyrPVx9TtizODM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="80%" height="500px" src="https://www.youtube.com/embed/hTWKbfoikeg?si=ejwyrPVx9TtizODM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
       </div>
