--- a/Bootstrap4/phpkt_09/index.html
+++ b/Bootstrap4/phpkt_09/index.html
@@ -10,6 +10,10 @@
             background-image: url(https://picsum.photos/1300/400);
             height: 20vh;
         }
+        iframe {
+          width: 80%;
+          height: 500px;
+        }
     </style>
 </head>
   
@@ -123,7 +127,7 @@
                   <button class="btn btn-primary me-3 mb-5">Download Now</button>
                   <button class="btn btn-outline-dark mb-5">Learn more now</button>
                 </span>
-                <iframe width="80%" height="500px" src="https://www.youtube.com/embed/hTWKbfoikeg?si=ejwyrPVx9TtizODM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/hTWKbfoikeg?si=ejwyrPVx9TtizODM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
       </div>
