--- a/Bootstrap4/phpkt_29/index.html
+++ b/Bootstrap4/phpkt_29/index.html
@@ -8,6 +8,7 @@
     <style>
         * {
           margin: 0;
+          padding: 0;
         }
         .imaged {
             background-image: url(https://picsum.photos/2000/800);
@@ -25,6 +26,11 @@
           margin-top: 10%;
           margin-left: 10px;
           margin-right: 20px;
+        }
+        .col {
+          padding-left: 0;
+          margin-top: 0;
+          padding-right: 0;
         }
     </style>
 </head>
@@ -103,9 +109,9 @@
               </div>
           </div>
       </div>
-    </div>
-      <div class="row text-center">
-          <div class="col center">
+    </div class="container container-fluid">
+      <div class="row">
+          <div class="col">
             <h3 class="mt-3">Nice Heading</h3>
             <p class="mt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ducimus culpa ex dolorem, repudiandae ad porro mollitia accusantium placeat rem.</p>
             <button class="btn btn-outline-primary">Download</button>
@@ -113,6 +119,16 @@
           <div class="col">
             <img class="img-fluid card-img-top" src="https://picsum.photos/900/600" alt="img">
           </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <img class="img-fluid card-img-top" src="https://picsum.photos/900/600" alt="img">
+        </div>
+        <div class="col">
+          <h3>Nice Heading</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ducimus culpa ex dolorem, repudiandae ad porro mollitia accusantium placeat rem.</p>
+          <button class="btn btn-outline-primary">Download</button>
+        </div>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
