--- a/Bootstrap4/phpkt_29/index.html
+++ b/Bootstrap4/phpkt_29/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>phpkt_09</title>
+    <title>phpkt_29</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style>
         * {
@@ -11,9 +11,15 @@
           padding: 0;
         }
         .imaged {
-            background-image: url(https://picsum.photos/2000/800);
+            background-image: url(https://picsum.photos/1200/800);
             height: 40vh;
             background-size: cover;
+        }
+        .peoplesay {
+          background-color: white;
+        }
+        .content {
+          background-color: rgb(250, 250, 255);
         }
         iframe {
           width: 80%;
@@ -22,15 +28,60 @@
         a {
           text-decoration: none;
         }
-        .center {
-          margin-top: 10%;
-          margin-left: 10px;
-          margin-right: 20px;
+        .arrow {
+          padding-top: 30px;
+          padding-bottom: 15px;
         }
         .col {
           padding-left: 0;
           margin-top: 0;
           padding-right: 0;
+        }
+        .col .content {
+          padding-top: 25%;
+          padding-left: 15%;
+          padding-right: 15%;
+        }
+        .container {
+          max-width: 2000px;
+        }
+        .mb-10 {
+          margin-bottom: 100px;
+        }
+        .pb-10 {
+          padding-bottom: 100px;
+        }
+        .nocredit {
+          font-size: small;
+        }
+        .row, .container {
+            --bs-gutter-x:0%;
+          }
+        @media only screen and (max-width: 600px) {
+          .card-img-top {
+            width: 100%;
+          }
+          .col-6 {
+            width: 100%;
+          }
+          .col {
+            flex: 100%;
+            margin-top: 10px;
+          }
+          .col .card-img-bottom {
+            padding: 0%;
+          }
+          *, ::after, ::before {
+            box-sizing:unset;
+          }
+          .row, .container {
+            --bs-gutter-x:0%;
+          }
+          .col .content {
+          padding-top: 0%;
+          padding-left: 15%;
+          padding-right: 15%;
+          }
         }
     </style>
 </head>
@@ -65,11 +116,13 @@
     </div>
   </nav>
   <div class="bg-body-tertiary rounded-3 text-white">
-    <div class="text-center container-fluid py-5 imaged ">
-      <div class="col">
-        <h1 class="display-5 fw-bold text-center">Build a landing page for your business<br> or project and generate more leads!</h1>
+    <div class="row text-center container-fluid py-5 imaged ">
+      <div class="col"></div>
+      <div class="col-6">
+        <h1 class="display-5 fw-bold text-center">Build a landing page for your business or project and generate more leads!</h1>
         <br>
       </div>
+      <div class="col"></div>
       <div class="row">
         <div class="col"></div>
         <div class="col col-sm-3">
@@ -77,15 +130,15 @@
             <input type="text" class="form-control" placeholder="Enter Your Email">
             <span class="btn btn-primary input-group-text" type="submit">Get Started</span>  
           </div>
-          <a href="#"><img class="img-fluid mt-5" width="25" src="Chevrondown.png" alt="down"></a>
+          <a href="#"><img class="img-fluid mt-5 arrow" width="25" src="Chevrondown.png" alt="down"></a>
         </div>
       <div class="col"></div>
       </div>
     </div>
 </div>
-    <div class="container">
-      <div class="content mb-5">
-        <div class="row pt-4 mt-5">
+    <div class="container container-fluid content">
+      <div class="content pb-5">
+        <div class="row pt-5 mb-2">
             <div class="col-sm-4 mb-3 text-center">
               <div class="h-200 rounded-1">
                 <img class="rounded-1" width="70" src="diamond.png" alt="img">
@@ -108,28 +161,103 @@
                 </div>
               </div>
           </div>
+        </div>
       </div>
-    </div class="container container-fluid">
-      <div class="row">
+        <div class="row content">
+          <div class="col text-center">
+            <div class="content">
+              <h3>Nice Heading</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ducimus culpa ex dolorem, repudiandae ad porro mollitia accusantium placeat rem.</p>
+              <button class="btn btn-outline-primary">Download</button>
+            </div>
+          </div>
           <div class="col">
-            <h3 class="mt-3">Nice Heading</h3>
-            <p class="mt-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ducimus culpa ex dolorem, repudiandae ad porro mollitia accusantium placeat rem.</p>
+            <img class="card-img-top" src="https://picsum.photos/900/600" alt="img">
+          </div>
+      </div>
+      <div class="row content">
+        <div class="col">
+          <img class="card-img-top" src="https://picsum.photos/900/600" alt="img">
+        </div>
+        <div class="col text-center">
+          <div class="content">
+            <h2>Nice Heading</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ducimus culpa ex dolorem, repudiandae ad porro mollitia accusantium placeat rem.</p>
             <button class="btn btn-outline-primary">Download</button>
           </div>
-          <div class="col">
-            <img class="img-fluid card-img-top" src="https://picsum.photos/900/600" alt="img">
-          </div>
-      </div>
+        </div>  
+      </div> 
       <div class="row">
+        <div class="col text-center ">
+          <div class="content pb-10">
+            <h2>Nice Heading</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ducimus culpa ex dolorem, repudiandae ad porro mollitia accusantium placeat rem.</p>
+            <button class="btn btn-outline-primary">Download</button>
+          </div>
+        </div> 
         <div class="col">
-          <img class="img-fluid card-img-top" src="https://picsum.photos/900/600" alt="img">
-        </div>
-        <div class="col">
-          <h3>Nice Heading</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ducimus culpa ex dolorem, repudiandae ad porro mollitia accusantium placeat rem.</p>
-          <button class="btn btn-outline-primary">Download</button>
+          <img class="card-img-top" src="https://picsum.photos/900/600" alt="img">
+        </div> 
+      </div> 
+      <div class="row">
+        <div class="col text-center">
+          <div class="content pb-10">
+            <h1>Nice Heading</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ducimus culpa ex dolorem, repudiandae ad porro mollitia accusantium placeat rem.</p>
+            <button class="btn btn-outline-dark">Download</button>
+          </div>
+        </div> 
+        <div class="col text-center">
+          <div class="content pb-10">
+            <h1>Nice Heading</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur ducimus culpa ex dolorem, repudiandae ad porro mollitia accusantium placeat rem.</p>
+            <button class="btn btn-outline-dark">Download</button>
+          </div>
+        </div> 
+      </div> 
+      <div class="container text-center peoplesay">
+        <h3 class="mb-10 mt-5" >What People Say</h3>
+        <div class="row mb-5">
+          <div class="col">
+            <img class="rounded-circle" height="150" width="150" src="https://thispersondoesnotexist.com/" alt="people">
+            <p class="mb-5 px-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, veritatis.</p>
+            <h6>Person Name</h6>
+            <p>Co-founder at Company</p>
+          </div>
+          <div class="col">
+            <img class="rounded-circle" height="150" width="150" src="https://thispersondoesnotexist.com/" alt="people">
+            <p class="mb-5 px-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, veritatis.</p>
+            <h6>Person Name</h6>
+            <p>Co-founder at Company</p>
+          </div>
+          <div class="col">
+            <img class="rounded-circle" height="150" width="150" src="https://thispersondoesnotexist.com/" alt="people">
+            <p class="mb-5 px-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, veritatis.</p>
+            <h6>Person Name</h6>
+            <p>Co-founder at Company</p>
+          </div>
         </div>
       </div>
+      <div class="bg-body-tertiary rounded-3 text-white">
+        <div class="row text-center container-fluid py-5 imaged ">
+          <div class="col"></div>
+          <div class="col-6">
+            <h1 class="h2 pt-5 fw-bold text-center">JOIN OVER 100,000 REGISTERED USERS PLANS START AT JUST $9.99 A MONTH</h1>
+            <br>
+          </div>
+          <div class="col"></div>
+          <div class="row">
+            <div class="col"></div>
+            <div class="col col-sm-3">
+              <div class="input-group-lg">
+                <button class="btn btn-warning input-group-text">Call To Action Button</button>
+                <p class="nocredit">NO CREADIT CARD REQUIRED!</p>
+              </div>
+            </div>
+          <div class="col"></div>
+          </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
