--- a/Bootstrap4/phpkt_29/index.html
+++ b/Bootstrap4/phpkt_29/index.html
@@ -126,9 +126,9 @@
       <div class="row">
         <div class="col"></div>
         <div class="col col-sm-3">
-          <div class="input-group input-group-lg">
+          <div class="input-group-lg input-group">
             <input type="text" class="form-control" placeholder="Enter Your Email">
-            <span class="btn btn-primary input-group-text" type="submit">Get Started</span>  
+            <a href="#" class="btn btn-primary p-3 rounded">Get Started</a>
           </div>
           <a href="#"><img class="img-fluid mt-5 arrow" width="25" src="Chevrondown.png" alt="down"></a>
         </div>
